--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $orange : #FC5A34;
 $white : #ffffff;
 $transparent : rgba(255, 255, 255, 0);
 $wing : linear-gradient(0deg, $orange 0%, $orange 20%, $transparent 20.1%, $transparent 80%, $orange 80.1%);
+$black : #000000;
 $grey1 : #444444;
 $grey2 : #AAAAAA;
 $grey3 : #C7C7C7;
@@ -11,6 +12,7 @@ $font12 : 12px;
 $font15 : 15px;
 $font16 : 16px;
 $font18 : 18px;
+$font20 : 20px;
 $font30 : 30px;
 
 $regular : 400;
