Login Registration Form added

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $grey1 : #444444;
 $grey2 : #AAAAAA;
 $grey3 : #C7C7C7;
 $greyLight : #E9E9E9;
+$shadowLight : 0px 3px 20px rgba(0, 0 , 0, 0.03);
 
 $font12 : 12px;
 $font13 : 13px;
