Course Complete -  UI

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -89,6 +89,7 @@ $bold : 700;
     font-weight: $semibold;
     justify-content: center;
     align-items: center;
+    color: $black;
     &::before, &::after{
         display: block;
         background: $wing;
