add Assigment - progress

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -9,6 +9,8 @@ $grey2 : #AAAAAA;
 $grey3 : #C7C7C7;
 $greyLight : #E9E9E9;
 $shadowLight : 0px 3px 20px rgba(0, 0 , 0, 0.03);
+$shadowMid :    1px 5px 9px rgba(0, 0 , 0, 0.09);
+// $shadowMid : 1px ​5px 9px rgba(0, 0 , 0, 0.09);
 
 $font12 : 12px;
 $font13 : 13px;
